yaml_parser/tests/fail/invalid-scalar-at-the-end-of-mapping.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 4, column 1
  |
4 | invalid
  | ^
expected `...`
